<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/item_restaurant_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center_vertical"
        android:maxLength="33"
        android:scrollHorizontally="true"
        android:text="@string/text_restaurant_first_line"
        android:textColor="@color/colorText"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_restaurant_address"
        android:layout_width="220dp"
        android:layout_height="@dimen/restaurant_text_height"
        android:layout_marginStart="10dp"
        android:gravity="center_vertical"
        android:maxLines="2"
        android:text="@string/text_restaurant_second_line"
        android:textColor="@color/colorTextGrey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_restaurant_name" />

    <TextView
        android:id="@+id/item_restaurant_hours"
        android:layout_width="220dp"
        android:layout_height="@dimen/restaurant_text_height"
        android:layout_marginStart="10dp"
        android:ellipsize="marquee"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_vertical"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:textColor="@color/colorTextGrey"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_restaurant_address"
        tools:text="@string/text_third_line" />

    <TextView
        android:id="@+id/item_restaurant_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:text="@string/restaurant_distance"
        android:textColor="@color/colorTextGrey"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/item_restaurant_picture"
        app:layout_constraintTop_toBottomOf="@id/item_restaurant_name" />

    <TextView
        android:id="@+id/item_restaurant_text_number_workmates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="24dp"
        android:gravity="bottom"
        android:textColor="@color/colorText"
        android:textStyle="bold"
        app:drawableLeftCompat="@drawable/ic_baseline_person_outline_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/item_restaurant_picture"
        app:layout_constraintTop_toBottomOf="@id/item_restaurant_distance"
        tools:text="@string/restaurant_text_number_workmates" />

    <ImageView
        android:id="@+id/item_restaurant_rating_star1"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="40dp"
        android:contentDescription="@string/restaurant_rating"
        android:src="@drawable/ic_baseline_star_24"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@id/item_restaurant_picture"
        app:layout_constraintStart_toEndOf="@id/item_restaurant_address"
        app:layout_constraintTop_toBottomOf="@id/item_restaurant_text_number_workmates"
        app:tint="@color/quantum_yellow" />

    <ImageView
        android:id="@+id/item_restaurant_rating_star2"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:contentDescription="@string/restaurant_rating"
        android:src="@drawable/ic_baseline_star_24"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@id/item_restaurant_picture"
        app:layout_constraintStart_toEndOf="@id/item_restaurant_address"
        app:layout_constraintTop_toBottomOf="@id/item_restaurant_text_number_workmates"
        app:tint="@color/quantum_yellow" />

    <ImageView
        android:id="@+id/item_restaurant_rating_star3"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="40dp"
        android:contentDescription="@string/restaurant_rating"
        android:src="@drawable/ic_baseline_star_24"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@id/item_restaurant_picture"
        app:layout_constraintStart_toEndOf="@id/item_restaurant_address"
        app:layout_constraintTop_toBottomOf="@id/item_restaurant_text_number_workmates"
        app:tint="@color/quantum_yellow" />

    <TextView
        android:id="@+id/item_restaurant_no_picture_text"
        android:layout_width="@dimen/picture_restaurant"
        android:layout_height="@dimen/picture_restaurant"
        android:layout_marginTop="@dimen/restaurant_horizontal_margin"
        android:layout_marginEnd="@dimen/restaurant_horizontal_margin"
        android:layout_marginBottom="@dimen/restaurant_vertical_margin"
        android:contentDescription="@string/restaurant_picture"
        android:scaleType="fitCenter"
        android:text="@string/item_restaurant_no_picture_no_text"
        android:textAlignment="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/item_restaurant_picture"
        android:layout_width="@dimen/picture_restaurant"
        android:layout_height="@dimen/picture_restaurant"
        android:layout_marginTop="@dimen/restaurant_horizontal_margin"
        android:layout_marginEnd="@dimen/restaurant_horizontal_margin"
        android:layout_marginBottom="@dimen/restaurant_vertical_margin"
        android:contentDescription="@string/restaurant_picture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/backgrounds/scenic" />


</androidx.constraintlayout.widget.ConstraintLayout>