<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/resto_landscape"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appName"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        android:layout_gravity="top|center"
        android:layout_marginTop="50dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="50dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:id="@+id/drawer_user_picture"
            android:src="@drawable/ic_baseline_account_circle_24"
            android:layout_marginEnd="20dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/drawer_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_name"
                android:textColor="@color/colorWhite"/>

            <TextView
                android:id="@+id/drawer_user_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_mail"
                android:textColor="@color/colorWhite"/>

        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>