<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Back Button -->
    <ImageButton
        android:id="@+id/fragment_settings_backpress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:contentDescription="@string/fragment_settings_backpress_description"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:tint="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/fragment_settings_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="fragment_settings_title" />


    <TextView
        android:id="@+id/fragment_settings_radius_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="125dp"
        android:text="@string/fragment_settings_radius_search"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.slider.Slider
        android:id="@+id/fragment_settings_radius_slider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="175dp"
        android:theme="@style/AppTheme"
        android:valueFrom="0.0"
        android:valueTo="5000.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_settings_radius_text"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/fragment_settings_update_notifications_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="28dp"
        android:text="@string/fragment_settings_update_notifications_text"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_settings_radius_slider"
        app:theme="@style/AppTheme" />


</androidx.constraintlayout.widget.ConstraintLayout>